--- a/Pipfile
+++ b/Pipfile
@@ -1,20 +1,10 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [dev-packages]
-
-"autopep8" = "*"
 pylint = "*"
-
+black = "*"
 
 [packages]
-
-
-
-[requires]
-
-python_version = "3.6"
